adicionei complexidade de espaço da hash matrix

--- a/relatorio.tex
+++ b/relatorio.tex
@@ -39,6 +39,8 @@
     \section{Análise das Complexidades}
     \subsection{Estrutura 1 - Hash Table}
     Para a Estrutura 1, analisaremos a complexidade esperada. O custo de alocação de memória é tido como constante.
+    \subsubsection{Complexidade de espaço de \texttt{HashMatrix}}
+    A estrutura \texttt{HashMatrix} possui 5 campos. Três deles são inteiros, um é um booleano e o último é um ponteiro para um vetor de ponteiros para listas ligadas. O tamanho do vetor de espalhamento é dinâmico, e o como o número de elementos na lista ligada de cada posição do vetor também é variável, o tamanho de cada posição do vetor também é. Porém, sabemos que o número de elementos na matriz esparsa é $k$. Sabemos também que o Load Factor $\alpha$ está sempre entre 0.25 e 0.75, ou seja, o tamanho do vetor $m$ está entre $\frac{4k}{3}$ e $4k$. Portanto, o tamanho do vetor é $O(k)$. Cada posição do vetor aponta para uma lista ligada que armazena os elementos que caíram naquele bucket. No pior caso, todos os $k$ elementos caem no mesmo bucket, e a lista ligada associada a esse bucket terá tamanho $k$. Mas como sabemos que o número total de nós entre todas as listas ligadas do vetor é $k$, sabemos que mesmo em uma distribuição improvável, que não corresponde à esperança de nós por bucket, só teremos o tamanho dos nós do bucket, e de ponteiros para bucket. Ambos lineares em $k$. Assim, o espaço total gasto pela estrutura \texttt{HashMatrix} é $M(k) \in O(k)$.
     \subsubsection{Complexidade de \texttt{hash}}
     A operação de Hash inclui apenas um número constante de operações básicas. Assim, essa função $T(k) \in \Theta(1)$. Porém, analisaremos também a esperança de elementos por bucket, que será usada para a análise da complexidade do caso médio de outras operações. Como nesse hash a tabela de espalhamento é um vetor, eventualmente será chamada de vetor de espalhamento ou simplesmente de vetor. 
 
